todofiber-app/manifests/microk8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todofiber-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todofiber-service
            port:
              number: 3000
